--- a/03-cleaning.Rmd
+++ b/03-cleaning.Rmd
@@ -35,7 +35,7 @@ for(i in 1:nrow(team_stats_comp)){
 team_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",team_stats_comp$Win.rate))/100
 team_stats_comp %>% select(Name, Region, Game.duration)
 ```
-Then we read players' data into our project but our data does not bind players to their belonging teams. So we add that to our players' data. Other players' data transformations are almost the same as the transformations of teams' data. Here are samples of our transformed data:
+Then we read players' data into our project but our data does not bind players to their belonging teams. So we add that to our players' data. We delete pentakill rates and solo kill rates. Other players' data transformations are almost the same as the transformations of teams' data. Here are samples of our transformed data:
 
 ```{r}
 library(stringr)
@@ -48,11 +48,11 @@ top_stats$Player = str_to_title(top_stats$Player)
 top_team$Player = str_trim(top_stats$Player,side="right")
 top_team$Player = str_to_title(top_stats$Player) 
 top_stats_comp = merge(top_stats,top_team,by="Player")
+top_stats_comp = top_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 top_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",top_stats_comp$Win.rate))/100
 top_stats_comp$KP. = as.numeric(gsub("[\\%,]","",top_stats_comp$KP.))/100
 top_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",top_stats_comp$FB.Victim))/100
 top_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",top_stats_comp$FB..))/100
-top_stats_comp$Solo.Kills = as.numeric(replace(top_stats_comp$Solo.Kills, top_stats_comp$Solo.Kills == "-", 0))
 
 jug_stats = read.csv("./data//jug_stats.csv")
 jug_team = read.csv("./data//jug_team.csv")
@@ -61,11 +61,11 @@ jug_stats$Player = str_to_title(jug_stats$Player)
 jug_team$Player = str_trim(jug_stats$Player,side="right")
 jug_team$Player = str_to_title(jug_stats$Player) 
 jug_stats_comp = merge(jug_stats,jug_team,by="Player")
+jug_stats_comp = jug_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 jug_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",jug_stats_comp$Win.rate))/100
 jug_stats_comp$KP. = as.numeric(gsub("[\\%,]","",jug_stats_comp$KP.))/100
 jug_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",jug_stats_comp$FB.Victim))/100
 jug_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",jug_stats_comp$FB..))/100
-jug_stats_comp$Solo.Kills = as.numeric(replace(jug_stats_comp$Solo.Kills, jug_stats_comp$Solo.Kills == "-", 0))
 
 mid_stats = read.csv("./data//mid_stats.csv")
 mid_team = read.csv("./data//mid_team.csv")
@@ -74,11 +74,11 @@ mid_stats$Player = str_to_title(mid_stats$Player)
 mid_team$Player = str_trim(mid_stats$Player,side="right")
 mid_team$Player = str_to_title(mid_stats$Player) 
 mid_stats_comp = merge(mid_stats,mid_team,by="Player")
+mid_stats_comp = mid_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 mid_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",mid_stats_comp$Win.rate))/100
 mid_stats_comp$KP. = as.numeric(gsub("[\\%,]","",mid_stats_comp$KP.))/100
 mid_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",mid_stats_comp$FB.Victim))/100
 mid_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",mid_stats_comp$FB..))/100
-mid_stats_comp$Solo.Kills = as.numeric(replace(mid_stats_comp$Solo.Kills, mid_stats_comp$Solo.Kills == "-", 0))
 
 bot_stats = read.csv("./data//bot_stats.csv")
 bot_team = read.csv("./data//bot_team.csv")
@@ -87,11 +87,11 @@ bot_stats$Player = str_to_title(bot_stats$Player)
 bot_team$Player = str_trim(bot_stats$Player,side="right")
 bot_team$Player = str_to_title(bot_stats$Player) 
 bot_stats_comp = merge(bot_stats,bot_team,by="Player")
+bot_stats_comp = bot_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 bot_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",bot_stats_comp$Win.rate))/100
 bot_stats_comp$KP. = as.numeric(gsub("[\\%,]","",bot_stats_comp$KP.))/100
 bot_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",bot_stats_comp$FB.Victim))/100
 bot_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",bot_stats_comp$FB..))/100
-bot_stats_comp$Solo.Kills = as.numeric(replace(bot_stats_comp$Solo.Kills, bot_stats_comp$Solo.Kills == "-", 0))
 
 sup_stats = read.csv("./data//sup_stats.csv")
 sup_team = read.csv("./data//sup_team.csv")
@@ -100,11 +100,12 @@ sup_stats$Player = str_to_title(sup_stats$Player)
 sup_team$Player = str_trim(sup_stats$Player,side="right")
 sup_team$Player = str_to_title(sup_stats$Player) 
 sup_stats_comp = merge(sup_stats,sup_team,by="Player")
+sup_stats_comp = sup_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 sup_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",sup_stats_comp$Win.rate))/100
 sup_stats_comp$KP. = as.numeric(gsub("[\\%,]","",sup_stats_comp$KP.))/100
 sup_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",sup_stats_comp$FB.Victim))/100
 sup_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",sup_stats_comp$FB..))/100
-sup_stats_comp$Solo.Kills = as.numeric(replace(sup_stats_comp$Solo.Kills, sup_stats_comp$Solo.Kills == "-", 0))
+
 top_stats_comp %>% select(Player, Team, Win.rate)
 ```
 
