--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -38,11 +38,11 @@ top_stats$Player = str_to_title(top_stats$Player)
 top_team$Player = str_trim(top_stats$Player,side="right")
 top_team$Player = str_to_title(top_stats$Player) 
 top_stats_comp = merge(top_stats,top_team,by="Player")
+top_stats_comp = top_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 top_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",top_stats_comp$Win.rate))/100
 top_stats_comp$KP. = as.numeric(gsub("[\\%,]","",top_stats_comp$KP.))/100
 top_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",top_stats_comp$FB.Victim))/100
 top_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",top_stats_comp$FB..))/100
-top_stats_comp$Solo.Kills = as.numeric(replace(top_stats_comp$Solo.Kills, top_stats_comp$Solo.Kills == "-", 0))
 
 jug_stats = read.csv("./data//jug_stats.csv")
 jug_team = read.csv("./data//jug_team.csv")
@@ -51,11 +51,11 @@ jug_stats$Player = str_to_title(jug_stats$Player)
 jug_team$Player = str_trim(jug_stats$Player,side="right")
 jug_team$Player = str_to_title(jug_stats$Player) 
 jug_stats_comp = merge(jug_stats,jug_team,by="Player")
+jug_stats_comp = jug_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 jug_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",jug_stats_comp$Win.rate))/100
 jug_stats_comp$KP. = as.numeric(gsub("[\\%,]","",jug_stats_comp$KP.))/100
 jug_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",jug_stats_comp$FB.Victim))/100
 jug_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",jug_stats_comp$FB..))/100
-jug_stats_comp$Solo.Kills = as.numeric(replace(jug_stats_comp$Solo.Kills, jug_stats_comp$Solo.Kills == "-", 0))
 
 mid_stats = read.csv("./data//mid_stats.csv")
 mid_team = read.csv("./data//mid_team.csv")
@@ -64,11 +64,11 @@ mid_stats$Player = str_to_title(mid_stats$Player)
 mid_team$Player = str_trim(mid_stats$Player,side="right")
 mid_team$Player = str_to_title(mid_stats$Player) 
 mid_stats_comp = merge(mid_stats,mid_team,by="Player")
+mid_stats_comp = mid_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 mid_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",mid_stats_comp$Win.rate))/100
 mid_stats_comp$KP. = as.numeric(gsub("[\\%,]","",mid_stats_comp$KP.))/100
 mid_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",mid_stats_comp$FB.Victim))/100
 mid_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",mid_stats_comp$FB..))/100
-mid_stats_comp$Solo.Kills = as.numeric(replace(mid_stats_comp$Solo.Kills, mid_stats_comp$Solo.Kills == "-", 0))
 
 bot_stats = read.csv("./data//bot_stats.csv")
 bot_team = read.csv("./data//bot_team.csv")
@@ -77,11 +77,11 @@ bot_stats$Player = str_to_title(bot_stats$Player)
 bot_team$Player = str_trim(bot_stats$Player,side="right")
 bot_team$Player = str_to_title(bot_stats$Player) 
 bot_stats_comp = merge(bot_stats,bot_team,by="Player")
+bot_stats_comp = bot_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 bot_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",bot_stats_comp$Win.rate))/100
 bot_stats_comp$KP. = as.numeric(gsub("[\\%,]","",bot_stats_comp$KP.))/100
 bot_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",bot_stats_comp$FB.Victim))/100
 bot_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",bot_stats_comp$FB..))/100
-bot_stats_comp$Solo.Kills = as.numeric(replace(bot_stats_comp$Solo.Kills, bot_stats_comp$Solo.Kills == "-", 0))
 
 sup_stats = read.csv("./data//sup_stats.csv")
 sup_team = read.csv("./data//sup_team.csv")
@@ -90,11 +90,11 @@ sup_stats$Player = str_to_title(sup_stats$Player)
 sup_team$Player = str_trim(sup_stats$Player,side="right")
 sup_team$Player = str_to_title(sup_stats$Player) 
 sup_stats_comp = merge(sup_stats,sup_team,by="Player")
+sup_stats_comp = sup_stats_comp %>% select(-c(Penta.Kills, Solo.Kills))
 sup_stats_comp$Win.rate = as.numeric(gsub("[\\%,]","",sup_stats_comp$Win.rate))/100
 sup_stats_comp$KP. = as.numeric(gsub("[\\%,]","",sup_stats_comp$KP.))/100
 sup_stats_comp$FB.Victim = as.numeric(gsub("[\\%,]","",sup_stats_comp$FB.Victim))/100
 sup_stats_comp$FB.. = as.numeric(gsub("[\\%,]","",sup_stats_comp$FB..))/100
-sup_stats_comp$Solo.Kills = as.numeric(replace(sup_stats_comp$Solo.Kills, sup_stats_comp$Solo.Kills == "-", 0))
 ```
 
 ## Influence of Gold Efficiency to Winning Rate
@@ -111,11 +111,11 @@ to measure gold efficiency.
 gold_dat = team_stats_comp[,c("Name","Win.rate","GPM","GD.15","CSM")]
 gold_dat <- gold_dat %>% mutate_each_(list(~scale(.) %>% as.vector),
                                   vars = c("GPM","GD.15","CSM"))
-gold_bar1 = ggplot(gold_dat, aes(x=reorder(Name,Win.rate),y=GPM)) + geom_bar(stat="identity")+ 
+gold_bar1 = ggplot(gold_dat, aes(x=reorder(Name,Win.rate),y=GPM)) + geom_bar(stat="identity", fill = "palegreen3")+ 
             xlab("Team Names")+
   theme(axis.ticks.y = element_blank(), axis.text.y = element_blank(), axis.title.y=element_blank())+ 
   coord_flip()
-gold_bar2 = ggplot(gold_dat, aes(x=reorder(Name,Win.rate),y=GD.15)) + geom_bar(stat="identity") + xlab("Team Names") + coord_flip()
+gold_bar2 = ggplot(gold_dat, aes(x=reorder(Name,Win.rate),y=GD.15)) + geom_bar(stat="identity", fill = "palegreen3") + xlab("Team Names") + coord_flip()
 
 gold_bar2+gold_bar1+plot_layout(widths=2,heights=1)
 ```
@@ -301,19 +301,19 @@ to measure objects control. The reason for choosing these three monsters is that
 jug_dat = team_stats_comp[,c("Name","Win.rate","DRAPG","DRA.","HERPG","HER.","NASHPG","NASH.")]
 jug_dat <- jug_dat %>% mutate_each_(list(~scale(.) %>% as.vector),
                                   vars = c("DRAPG","DRA.","HERPG","HER.","NASHPG","NASH."))
-jug_bar1 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=DRAPG)) + geom_bar(stat="identity") + coord_flip()+ xlab("Teams")
+jug_bar1 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=DRAPG)) + geom_bar(stat="identity", fill = "indianred3") + coord_flip()+ xlab("Teams")
 
-jug_bar3 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=HERPG)) + geom_bar(stat="identity") + coord_flip()+ xlab("Teams")+theme(axis.ticks.y = element_blank(), axis.text.y = element_blank(), axis.title.y=element_blank())
+jug_bar3 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=HERPG)) + geom_bar(stat="identity", fill = "lightsteelblue3") + coord_flip()+ xlab("Teams")+theme(axis.ticks.y = element_blank(), axis.text.y = element_blank(), axis.title.y=element_blank())
 
-jug_bar5 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=NASHPG)) + geom_bar(stat="identity") + coord_flip()+ xlab("Teams")+theme(axis.ticks.y = element_blank(), axis.text.y = element_blank(), axis.title.y=element_blank())
+jug_bar5 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=NASHPG)) + geom_bar(stat="identity", fill = "seagreen3") + coord_flip()+ xlab("Teams")+theme(axis.ticks.y = element_blank(), axis.text.y = element_blank(), axis.title.y=element_blank())
 
 jug_bar1+jug_bar5+jug_bar3+plot_layout(widths=3,heights=1)
 ```
 
 ```{r}
-jug_bar2 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=DRA.)) + geom_bar(stat="identity") + coord_flip()+ xlab("Teams")
-jug_bar4 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=HER.)) + geom_bar(stat="identity") + coord_flip()+ xlab("Teams")+theme(axis.ticks.y = element_blank(), axis.text.y = element_blank(), axis.title.y=element_blank())
-jug_bar6 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=NASH.)) + geom_bar(stat="identity") + coord_flip()+ xlab("Teams")+theme(axis.ticks.y = element_blank(), axis.text.y = element_blank(), axis.title.y=element_blank())
+jug_bar2 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=DRA.)) + geom_bar(stat="identity", fill = "indianred3") + coord_flip()+ xlab("Teams")
+jug_bar4 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=HER.)) + geom_bar(stat="identity", fill = "lightsteelblue3") + coord_flip()+ xlab("Teams")+theme(axis.ticks.y = element_blank(), axis.text.y = element_blank(), axis.title.y=element_blank())
+jug_bar6 = ggplot(jug_dat, aes(x=reorder(Name,Win.rate),y=NASH.)) + geom_bar(stat="identity", fill = "seagreen3") + coord_flip()+ xlab("Teams")+theme(axis.ticks.y = element_blank(), axis.text.y = element_blank(), axis.title.y=element_blank())
 jug_bar2+jug_bar6+jug_bar4+plot_layout(widths=3,heights=1)
 ```
 
