--- a/06-interactive.Rmd
+++ b/06-interactive.Rmd
@@ -47,13 +47,6 @@
  <p id="RANK"><button type="button">RANK</button></p>
 
  
-
-
-
- 
-
- 
- 
  <script>
  var w = 700;
   var h = 400;
@@ -201,8 +194,9 @@
  </script>
  
 <p> 
-The interactive bar graph shows the different team stats in 2022 lol World Championship by teams. We select 5 variables:
-KD:Kill/Death, GDRL:Game Duration, DPM: damage to champions per minute, CSM:creeps per minute and Rank. Click on the buttons to see the stats varies.
+The interactive bar graph shows the different team stats in ***League of Legends World Championship 2021***. 
+
+We select 5 variables: KD:Kill/Death, GDR:Game Duration, DPM: damage to champions per minute, CSM:creeps per minute and Rank. Click on the buttons to see the stats varies.
 </p>
 <p> 
 
